# workshop-telegram-bot

./: .gitignore  LICENSE  README.md
hello_world/: CMakeLists.txt  conanfile.py  main.cpp
random_chat/: CMakeLists.txt  bot_random.cpp  bot_random.h  conanfile.py  main.cpp
wordnet_game/: CMakeLists.txt  bot.cpp  bot.h  conanfile.py  main.cpp  wordnet.cpp  wordnet.h
